🌐 Add GitHub Pages deployment support
✨ Features Added:
- GitHub Actions workflow for automatic deployment
- Demo data service for frontend-only operation
- API service with demo fallback functionality
- Homepage configuration for GitHub Pages
- Deployment scripts in package.json

🔧 Technical Changes:
- Added gh-pages dependency for deployment
- Created demo data with realistic sample content
- Enhanced API service with fallback mechanism
- Updated README with deployment instructions
- Configured automatic CI/CD pipeline

🚀 Deployment Ready:
- Live demo will be available at: https://Pratistha002.github.io/HumanityApp
- Fully functional without backend dependency
- Automatic deployment on push to main branch

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dev:backend": "cd Backend && npm run dev-server-only",
     "dev:frontend": "cd Frontend && npm start",
     "build": "cd Frontend && npm run build",
+    "deploy": "cd Frontend && npm run deploy",
+    "predeploy": "npm run build",
     "install:all": "npm install && cd Backend && npm install && cd ../Frontend && npm install",
     "clean": "rimraf Backend/node_modules Frontend/node_modules node_modules",
     "test": "cd Backend && npm test && cd ../Frontend && npm test",
